# videomanlib

./: CMakeLists.txt  config.cmake.in  readme.txt
CMakeModules/: FindSFML.cmake  (+4 more)
examples/IDSuEye/: CMakeLists.txt  IDSuEye.cpp
examples/VMHighgui/: CMakeLists.txt
examples/VMWithPointGreyAdvanced/: CMakeLists.txt  VMWithPointGrey.cpp
examples/VMWithPointGreySimple/: CMakeLists.txt  VMWithPointGrey.cpp
examples/VMwithDSDeviceController/: CMakeLists.txt  VMwithDSDeviceController.cpp
examples/VMwithDSPointGreyController/: CMakeLists.txt  VMwithDSPointGreyController.cpp
examples/VMwithDirectShow/: CMakeLists.txt  VMwithDirectShow.cpp
examples/VMwithDirectShowMultiVideo/: CMakeLists.txt  VMwithDirectShowMultiVideo.cpp
examples/cuda/: CMakeLists.txt  FreeType.cpp  VMwithCuda.cpp  cudaEffect.cu  cudaEffect.cuh
examples/drawing2D/: CMakeLists.txt  FreeType.cpp  FreeType.h  drawing2D.cpp
examples/imageSequence/: CMakeLists.txt  imageSequence.cpp
examples/multiCamera/: CMakeLists.txt  multiCamera.cpp
examples/opencvHighgui/: CMakeLists.txt  opencvHighgui.cpp
examples/opencvLKdemo/: CMakeLists.txt  opencvLKdemo.cpp
examples/opencvSimple/: CMakeLists.txt  opencvSimple.cpp
examples/videoFileControl/: CMakeLists.txt  videoFileControl.cpp
inputs/: CMakeLists.txt  VMmoduleBase.cpp  VMmoduleBase.h
inputs/VMDC1394/: DC1394DeviceInput.cpp  DC1394DeviceInput.h  VMDC1394.cpp
inputs/VMDirectShow/: CMakeLists.txt  CaptureDeviceDSController.h  CaptureDeviceDShow.cpp  CaptureDeviceDShow.h  DSPointGreyController.cpp  DSuEyeCameraController.h  DirectShowHelpers.h  Instructions.txt  VideoFileDShow.cpp  VideoFileDShow.h  VideoInputDShow.cpp  VideoInputDShow.h  stdafx.cpp  stdafx.h
inputs/VMFFmpeg/: CMakeLists.txt  VMFFmpeg.cpp  videofile.h
inputs/VMGenicam/: CMakeLists.txt
inputs/VMHighgui/: HighguiDeviceInput.cpp  HighguiDeviceInput.h  HighguiVideoFileInput.cpp  VMHighgui.cpp
inputs/VMIDSFalcon/: CMakeLists.txt  IDSFalconFrameGrabber.cpp  IDSFalconFrameGrabber.h  VMIDSFalcon.cpp  falconFrameGrabberController.h
inputs/VMIDSuEye/: IDSuEye.cpp  IDSuEye.h  VMIDSuEye.cpp  uEyeCameraController.cpp  uEyeCameraController.h
inputs/VMImageFile/: CMakeLists.txt  ImageFile.cpp  ImageFile.h
inputs/VMImageSequence/: CMakeLists.txt  ImageSequence.cpp
inputs/VMImagingSource/: TISInput.cpp  VMImagingSource.cpp
inputs/VMOpenNI/: CMakeLists.txt  KinectCamera.h  VMOpenNI.cpp
inputs/VMPointGrey/: CMakeLists.txt  PGRCamera.cpp  PGRCamera.h  PointGreyController.cpp
inputs/VMPointGrey2/: CMakeLists.txt  PGRCamera.cpp  PGRCamera.h  PGRGigECamera.h  PointGreyController.cpp  PointGreyController.h  VMPointGrey.cpp
inputs/VMtemplate/: CMakeLists.txt  VMYOURINPUTNAME.cpp  VMYOURINPUTNAME.h  VMYOURINPUTNAMEInput.cpp  VMYOURINPUTNAMEInput.h
trunk/: CMakeLists.txt  config.cmake.in  readme.txt
trunk/CMakeModules/: FindDC1394.cmake  FindFFmpeg.cmake  FindFalcon.cmake  FindFlyCapture1.cmake  FindFlyCapture2.cmake  FindGLUT.cmake  FindImagingSource.cmake  FindPGRDirectShow.cmake  FindSFML.cmake  FindUEYE.cmake  FindUEYEDS.cmake
trunk/control/: VideoManControl.cpp  VideoManControlPrivate.h  VideoManFactory.cpp  VideoManFactory.h  VideoManInputFormat.cpp
trunk/control/inputs/: UserInput.cpp  UserInput.h  VideoManInputController.cpp
trunk/control/renderers/: VideoManRendererOGL.cpp  VideoManRendererOGL.h
trunk/doc/: Doxyfile
trunk/examples/: CMakeLists.txt
trunk/examples/DC1394/: exDC1394.cpp
trunk/examples/IDSuEye/: CMakeLists.txt  IDSuEye.cpp
trunk/examples/VMHighgui/: exVMHighgui.cpp
trunk/examples/VMWithPointGreyAdvanced/: CMakeLists.txt  VMWithPointGrey.cpp
trunk/examples/VMWithPointGreySimple/: CMakeLists.txt  VMWithPointGrey.cpp
trunk/examples/VMwithDSDeviceController/: CMakeLists.txt  VMwithDSDeviceController.cpp
trunk/examples/VMwithDSPointGreyController/: VMwithDSPointGreyController.cpp
trunk/examples/VMwithDirectShow/: CMakeLists.txt  VMwithDirectShow.cpp
trunk/examples/VMwithDirectShowMultiVideo/: VMwithDirectShowMultiVideo.cpp
trunk/examples/VMwithQT/: CMakeLists.txt  GLWindow.cpp  GLWindow.h  VMwithQT.cpp
trunk/examples/cuda/: FreeType.cpp  VMwithCuda.cpp  cudaEffect.h
trunk/examples/cvBlobLab/: GLWindow.cpp
trunk/examples/drawing2D/: CMakeLists.txt  drawing2D.cpp
trunk/examples/multiCamera/: CMakeLists.txt  multiCamera.cpp
trunk/examples/multiInstancesQT/: CMakeLists.txt  GLWindow.cpp  GLWindow.h  main.cpp  mainWindow.cpp  mainWindow.h
trunk/examples/opencvHighgui/: CMakeLists.txt  opencvHighgui.cpp
trunk/examples/opencvLKdemo/: CMakeLists.txt  opencvLKdemo.cpp
trunk/examples/opencvSimple/: opencvSimple.cpp
trunk/examples/videoFileControl/: videoFileControl.cpp
trunk/include/: VideoInput.h  VideoManControl.h  VideoManInputFormat.h
trunk/include/controllers/: IDSPointGreyController.h  IDSuEyeCameraController.h  IPointGreyController.h  IfalconFrameGrabberController.h  IuEyeCameraController.h
trunk/inputs/: CMakeLists.txt
trunk/inputs/VMDC1394/: CMakeLists.txt  DC1394DeviceInput.cpp
trunk/inputs/VMDirectShow/: CMakeLists.txt  CaptureDeviceDSController.cpp  CaptureDeviceDShow.cpp  CaptureDeviceDShow.h  DSPointGreyController.h  DSuEyeCameraController.cpp  DirectShowHelpers.cpp  VMDirectShow.cpp  VideoFileDShow.cpp  VideoInputDShow.cpp  VideoInputDShow.h  crossbar.cpp  crossbar.h
trunk/inputs/VMFFmpeg/: videofile.cpp  videofile.h
trunk/inputs/VMGenicam/: VMGenicam.cpp
trunk/inputs/VMHighgui/: CMakeLists.txt  HighguiDeviceInput.cpp  HighguiDeviceInput.h  HighguiVideoFileInput.cpp  HighguiVideoFileInput.h  VMHighgui.cpp
trunk/inputs/VMIDSFalcon/: IDSFalconFrameGrabber.cpp  IDSFalconFrameGrabber.h  VMIDSFalcon.cpp  falconFrameGrabberController.cpp
trunk/inputs/VMIDSuEye/: CMakeLists.txt  IDSuEye.cpp  IDSuEye.h  VMIDSuEye.cpp  uEyeCameraController.cpp  uEyeCameraController.h
trunk/inputs/VMImageFile/: ImageFile.cpp  VMImageFile.cpp
trunk/inputs/VMImageSequence/: ImageSequence.cpp  ImageSequence.h  VMImageSequence.cpp
trunk/inputs/VMImagingSource/: CMakeLists.txt  TISInput.cpp  TISInput.h  VMImagingSource.cpp
(+245 files in other folders)
