FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exDC1394 exDC1394.cpp )
TARGET_LINK_LIBRARIES( exDC1394 VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES} )
set_target_properties( exDC1394 PROPERTIES FOLDER "examples")
add_dependencies( exDC1394 VideoMan )
