FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exIDSuEye IDSuEye.cpp )
TARGET_LINK_LIBRARIES( exIDSuEye VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES} )
set_target_properties( exIDSuEye PROPERTIES FOLDER "examples")
add_dependencies( exIDSuEye VideoMan )
