FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES(  ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exampleVMWithPointGreyAdvanced VMWithPointGrey.cpp )
TARGET_LINK_LIBRARIES( exampleVMWithPointGreyAdvanced  VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES} )
set_target_properties( exampleVMWithPointGreyAdvanced PROPERTIES FOLDER "examples")
add_dependencies( exampleVMWithPointGreyAdvanced VideoMan )