FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( SFML REQUIRED system window graphics )
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} ${SFML_INCLUDE_DIR} )
ADD_EXECUTABLE( exampleVMWithPointGreyAdvanced VMWithPointGrey.cpp )
TARGET_LINK_LIBRARIES( exampleVMWithPointGreyAdvanced  VideoMan ${OPENGL_LIBRARIES} ${SFML_LIBRARIES} )
set_target_properties( exampleVMWithPointGreyAdvanced PROPERTIES FOLDER "examples")
add_dependencies( exampleVMWithPointGreyAdvanced VideoMan )