FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exDirectShowPtGreyController VMwithDSPointGreyController.cpp )
TARGET_LINK_LIBRARIES( exDirectShowPtGreyController VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES}  )
set_target_properties( exDirectShowPtGreyController PROPERTIES FOLDER "examples")
add_dependencies( exDirectShowPtGreyController VideoMan )