FIND_PACKAGE( GLUT REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${GLUT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exampleVMwithDirectShow VMwithDirectShow.cpp )
TARGET_LINK_LIBRARIES( exampleVMwithDirectShow VideoMan ${GLUT_glut_LIBRARY} ${OPENGL_LIBRARIES}  )
set_target_properties( exampleVMwithDirectShow PROPERTIES FOLDER "examples")
add_dependencies( exampleVMwithDirectShow VideoMan )