FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exDirectShow VMwithDirectShow.cpp )
TARGET_LINK_LIBRARIES( exDirectShow VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES}  )
set_target_properties( exDirectShow PROPERTIES FOLDER "examples")
add_dependencies( exDirectShow VideoMan )