FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exDirectShowMultiVideo VMwithDirectShowMultiVideo.cpp )
TARGET_LINK_LIBRARIES( exDirectShowMultiVideo VideoMan ${FREEGLUT_LIBRARIES}  ${OPENGL_LIBRARIES} )
set_target_properties( exDirectShowMultiVideo PROPERTIES FOLDER "examples")
add_dependencies( exDirectShowMultiVideo VideoMan )
