CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FIND_PACKAGE(CUDA)
FIND_PACKAGE( GLUT REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( Freetype REQUIRED )

INCLUDE_DIRECTORIES( ${GLUT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS})
CUDA_ADD_EXECUTABLE(exampleVMwithCuda VMwithCuda.cpp cudaEffect.cu cudaEffect.cuh FreeType.cpp FreeType.h)

TARGET_LINK_LIBRARIES( exampleVMwithCuda VideoMan ${GLUT_glut_LIBRARY} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES})
set_target_properties( exampleVMwithCuda PROPERTIES FOLDER "examples")
add_dependencies( exampleVMwithCuda VideoMan )