CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FIND_PACKAGE(CUDA)
FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( Freetype REQUIRED )

INCLUDE_DIRECTORIES( ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS})
CUDA_ADD_EXECUTABLE(exCuda VMwithCuda.cpp cudaEffect.cu cudaEffect.cuh FreeType.cpp FreeType.h)

TARGET_LINK_LIBRARIES( exCuda VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES})
set_target_properties( exCuda PROPERTIES FOLDER "examples")
add_dependencies( exCuda VideoMan )