FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( GLUT REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( Freetype REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} ${GLUT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} )
ADD_EXECUTABLE( exampleDrawing2D drawing2D.cpp FreeType.cpp FreeType.h)
TARGET_LINK_LIBRARIES( exampleDrawing2D VideoMan ${GLUT_glut_LIBRARY} ${OPENGL_LIBRARIES} ${OpenCV_LIBS} ${FREETYPE_LIBRARIES})
set_target_properties( exampleDrawing2D PROPERTIES FOLDER "examples")
add_dependencies( exampleDrawing2D VideoMan )
