FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} ${FREEGLUT_INCLUDE_DIRS} )
ADD_EXECUTABLE( exImageSequence imageSequence.cpp )
TARGET_LINK_LIBRARIES( exImageSequence VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES}  )
set_target_properties( exImageSequence PROPERTIES FOLDER "examples")
add_dependencies( exImageSequence VideoMan )