FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
ADD_EXECUTABLE( exMultiCamera multiCamera.cpp )
TARGET_LINK_LIBRARIES( exMultiCamera VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES})
set_target_properties( exMultiCamera PROPERTIES FOLDER "examples")
add_dependencies( exMultiCamera VideoMan )