FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exOpencvLKdemo opencvLKdemo.cpp )
TARGET_LINK_LIBRARIES( exOpencvLKdemo VideoMan  ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${OpenCV_LIBS})
set_target_properties( exOpencvLKdemo PROPERTIES FOLDER "examples")
add_dependencies( exOpencvLKdemo VideoMan )