FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exOpencv opencvSimple.cpp )
TARGET_LINK_LIBRARIES( exOpencv VideoMan ${FREEGLUT_LIBRARIES}  ${OPENGL_LIBRARIES} ${OpenCV_LIBS})
set_target_properties( exOpencv PROPERTIES FOLDER "examples")
add_dependencies( exOpencv VideoMan )