FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} ${FREEGLUT_INCLUDE_DIRS} )
ADD_EXECUTABLE( exVideoFileControl videoFileControl.cpp )
TARGET_LINK_LIBRARIES( exVideoFileControl VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES}  )
set_target_properties( exVideoFileControl PROPERTIES FOLDER "examples")
add_dependencies( exVideoFileControl VideoMan )