FIND_PACKAGE( Freeglut REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES(  ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( exPointGrey VMWithPointGrey.cpp )
TARGET_LINK_LIBRARIES( exPointGrey VideoMan ${FREEGLUT_LIBRARIES} ${OPENGL_LIBRARIES} )
set_target_properties( exPointGrey PROPERTIES FOLDER "examples")
add_dependencies( exPointGrey VideoMan )